@@ -1,3 +1,10 @@
+Sun May 12 17:25:46 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* configure.in: removes AC_CHECK_FUNCS(truncate64) because it's
+	  unused.
+	* file.c (rb_file_s_truncate): use correct type. chsize takes
+	  a long.
+
 Sun May 12 17:18:46 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* process.c: move '#define SPAWNV 1' to win32/Makefile.sub.
